--- a/FrontEndAndroid/app/src/main/AndroidManifest.xml
+++ b/FrontEndAndroid/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/Theme.MyApplication"
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
+        android:screenOrientation="portrait"
         tools:targetApi="31" >
 
         <activity
